# eps-workflow-semantic-release

./: .gitallowed  .pre-commit-config.yaml  .tool-versions  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  release.config.cjs  release.config.js  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: combine-dependabot-prs.yml  pr_title_check.yml  pull_request.yml  release.yml  tag-release.yml
releaseNotesTemplates/: commit.hbs
